[gd_scene load_steps=3 format=3 uid="uid://ooiq0s8kor6o"]

[ext_resource type="Script" path="res://src/transition_button.gd" id="1_hr42k"]
[ext_resource type="Script" path="res://src/config_screen.gd" id="1_ll1g6"]

[node name="ConfigScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ll1g6")

[node name="ConfigLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = 20.0
offset_bottom = 38.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "Configurações"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 102.0
offset_right = 953.0
offset_bottom = 323.0
columns = 2

[node name="WebLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
text = "URL Web"

[node name="WebInput" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.2

[node name="APILabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
text = "URL API"

[node name="APIInput" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.2

[node name="WebsocketLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
text = "URL Websocket QR"

[node name="WebsocketInput" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.2

[node name="HSeparator" type="HSeparator" parent="GridContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QRTimeLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
text = "QR Code Timeout"

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2

[node name="TimeoutSlider" type="HSlider" parent="GridContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 10.0
max_value = 180.0
step = 10.0
value = 10.0

[node name="TimeoutLabel" type="Label" parent="GridContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "180 Segundos"
horizontal_alignment = 2

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 584.0
offset_right = 98.0
offset_bottom = 626.0
theme_override_font_sizes/font_size = 24
text = " Voltar "
script = ExtResource("1_hr42k")
new_scene = "uid://dev45828nlpj"
